# main_robot_2025-2026

./: .gitignore  README.md
PCB/: main pcb.kicad_prl  main pcb.kicad_pro
pcb/: main board infos.txt
pcb/kicad lib/LM2596S-Module/: LM2596S-Module.kicad_sym
pcb/kicad lib/LM2596S-Module/LM2596S-Module.pretty/: LM2596S-Module.kicad_mod
pcb/main board/: #auto_saved_files#  fp-info-cache  main board.kicad_pcb  main board.kicad_prl  main board.kicad_pro  main board.kicad_sch  main board.kicad_sch-bak  motors and steppers drivers.kicad_sch  untitled.kicad_sch  ~main board.kicad_sch.lck
program/main controller code/: CMakeLists.txt
program/main controller code/src/: gyro.c  i2c_master.c  main.c  motion_control.c  motors.c  robot.c  udp_client.c  udp_payload.c  wifi_operator.c
program/main controller code/src/headers/: motion_control.h  robot.h
program/main controller code/src/i2c/: gyro.c  i2c_master.c  mcp23017.c  motors.c
program/main controller code/src/i2c/headers/: gyro.h  i2c_master.h  mcp23017.h
program/main controller code/src/include/: i2c_master.h  motion_control.h  motors.h  robot.h  udp_payload.h  wifi_operator.h
program/main controller code/src/wifi/: udp_client.c  udp_payload.c  wifi_operator.c
program/main controller code/src/wifi/headers/: udp_client.h  wifi_operator.h
program/main_controller/: CMakeLists.txt  Makefile  Readme.md
program/main_controller/src/: main.c  motion_control.c  motors.c  robot.c  servos.c
program/main_controller/src/headers/: motion_control.h  motors.h  robot.h  servos.h
program/main_controller/src/i2c/: gyro.c  i2c_master.c  mcp23017.c  motors.c
program/main_controller/src/i2c/headers/: gyro.h  i2c_master.h  mcp23017.h  motors.h
program/main_controller/src/wifi/: udp_client.c  udp_payload.c  wifi_operator.c
program/main_controller/src/wifi/headers/: lwipopts.h  udp_client.h  udp_payload.h  wifi_operator.h  wifi_operator.h.template
program/motion controller code/: CMakeLists.txt  Readme.md
program/motion controller code/src/: i2c_buffer.c  i2c_slave.c  main.c  motors.c  robot.c
program/motion controller code/src/headers/: motors.h  robot.h
program/motion controller code/src/i2c/: i2c_buffer.c  i2c_slave.c
program/motion controller code/src/i2c/headers/: i2c_buffer.h  i2c_slave.h
program/motion controller code/src/include/: i2c_buffer.h  i2c_slave.h  motors.h  robot.h
program/motion_controller/: CMakeLists.txt
program/motion_controller/src/: main.c  motors.c  robot.c  servos.c
program/motion_controller/src/headers/: motors.h  robot.h  servos.h
program/motion_controller/src/i2c/: i2c_slave.c
program/motion_controller/src/i2c/headers/: i2c_slave.h
program/pseudo telecommand/: telecommand.py
